2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03440] Re: restore alarm event
	* fm.h (BP_RELOAD): added
		(DOWNLOAD_LIST_TITLE): added
	* main.c (main): if BP_RELOAD, do reload
		(reload): if buffer is DOWNLOAD_LIST, ldDL()
		(DownloadListBuffer): rewrite with DOWNLOAD_LIST_TITLE
		(download_action): delete "update"
				don't delete prev buffer
		(ldDL): rewrite to do reload

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03439] restore alarm event
	* fm.h (AL_RESTORE): added
	* main.c (alarm_sec): deleted
		(alarm_status): deleted
		(alarm_buffer): deleted
		(alarm_event): deleted
		(AlarmEvent): added
		(CurrentAlarm): added
		(PrevAlarm): added
		(main): rewrite with CurrentAlarm
		(SigAlarm): rewrite with CurrentAlarm
		(copyAlarmEvent): added
		(setAlarm): if AL_RESTORE, copy back from PrevAlarm
			rewrite with CurrentAlarm

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03438] Re: segmentation fault by large complex table.
	* table.c (check_table_height): check MAXROWCELL
	* table.h (MAXROWCELL): added

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03437] Re: Check image size
	* fm.h (MAX_IMAGE_SIZE): changed to 2048

2002-11-16  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03436] Check image size
	* file.c (process_img): check w > MAX_IMAGE_SIZE
		(HTMLlineproc2body): check w,h > MAX_IMAGE_SIZE
	* fm.h (MAX_IMAGE_SIZE): added
	* image.c (getImageSize): check w,h,width,height > MAX_IMAGE_SIZE

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03435] save image with SAVE
	* buffer.c (discardBuffer): check image
	* file.c (loadImageBuffer): add st
			IMG_FLAG_DONE_REMOVE
			s/sourcefile/mailcap_source/
	* fm.h (IMG_FLAG_DONT_REMOVE): added
	* image.c (drawImage): & IMG_FLAG_LOADED
		(deleteImage): & IMG_FLAG_DONT_REMOVE
		(showImageProgress): & IMG_FLAG_LOADED
		(getImage): & IMG_FLAG_LOADED
		(getImageSize): & IMG_FLAG_LOADED